{
    "name": "PlayerInputV2",
    "maps": [
        {
            "name": "CharacterControlls",
            "id": "6793b76a-eb1f-4781-bd21-b29c4a1ae732",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "51698f4f-9550-49c2-8c94-aab1a4be04ad",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "3afc821b-39a9-44dc-9763-1bb2609a0ca2",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Ultimate",
                    "type": "Button",
                    "id": "a81a749e-c0fc-4f5a-8c9a-01295cdce810",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "f8671606-ba7a-4e45-ab29-4f96aeb9b677",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": "Press"
                },
                {
                    "name": "Charge",
                    "type": "Button",
                    "id": "ef4794a4-1268-48d7-8311-a86db01ff7dd",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": "Press"
                },
                {
                    "name": "ChangeEnemy",
                    "type": "Button",
                    "id": "e9bb4793-3255-46e6-b0e0-ad7a8a2a87b5",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "984f2d9b-ec65-47fc-af1f-872a9ad697d5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "02815d2b-13cc-4ebb-8181-2cb2897ee24b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8de876dd-eef6-44c0-8b11-c074f9387c6e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bdd0d842-86ee-40fa-a50d-2fe429479e61",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "35e6e2e2-6115-4b36-a0cf-650a125c5393",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8a6ab5ef-2d77-4232-98ef-a9c4bb0a8477",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bd310da-7c11-47a8-aac5-f476de1588aa",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ultimate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2055075a-781e-4096-b412-8c66905ca9a5",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdd81ba1-8f32-4b50-9542-13215c5f3b92",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Charge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea5dd4bf-6811-425e-abfd-8ad2bb60ac1b",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}